objects/Apttus__AlternateClause__c.object
<CustomObject>
    <fields>
        <fullName>Apttus__ClauseConfigurationId__c</fullName>
        <description>ID of the clause configuration record</description>
        <inlineHelpText>ID of the clause configuration record</inlineHelpText>
        <label>Clause Configuration</label>
        <referenceTo>Apttus__ClauseConfiguration__c</referenceTo>
        <relationshipLabel>Alternate Clauses</relationshipLabel>
        <relationshipName>Alternate_Clauses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the clause used to replace the the Standard Clause</description>
        <inlineHelpText>ID of the clause used to replace the the Standard Clause</inlineHelpText>
        <label>Clause</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Alternate Clauses</relationshipLabel>
        <relationshipName>AlternateClauses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseRanking__c</fullName>
        <description>Priority order of  the Alternate Clause</description>
        <inlineHelpText>Priority order of  the Alternate Clause</inlineHelpText>
        <label>Clause Ranking</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Alternate Clause</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alternate Clauses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>